--- a/learn-certs-pr/TOC.yml
+++ b/learn-certs-pr/TOC.yml
@@ -13,8 +13,12 @@
     href: retired-certification-exams.md 
   - name: Отставные курсы
     href: retired-courses.md
-- name: Сертификация MCT
+- name: Станьте сертифицированным инструктором Microsoft
   href: mct-certification.md
+- name: О сертификационных экзаменах Microsoft
+  href: certification-exams.md
+- name: Про онлайн-экзамены
+  href: online-exams.md
 - name: Правила проведения экзаменов и часто задаваемые вопросы
   href: certification-exam-policies.md
 - name: Помощь по сертификации
