--- a/learn-certs-pr/exams/70-463.yml
+++ b/learn-certs-pr/exams/70-463.yml
@@ -16,7 +16,7 @@ summary: |-
 subTitle: Этот экзамен в первую очередь предназначен для разработчиков ETL и хранилищ данных, которые создают решения Business Intelligence (BI), и в чьи обязанности входит очистка данных, извлечение, преобразование и загрузка, а также внедрение хранилища данных.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4toVI
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=70-463&examname=Implementing%20a%20Data%20Warehouse%20with%20Microsoft%20SQL%20Server%202012/2014&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-463
+scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=463&examname=Implementing%20a%20Data%20Warehouse%20with%20Microsoft%20SQL%20Server%202012/2014&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-463
 locales:
 - en
 - zh-cn
