--- a/learn-certs-pr/exams/70-465.yml
+++ b/learn-certs-pr/exams/70-465.yml
@@ -16,7 +16,7 @@ summary: |-
 subTitle: Этот экзамен предназначен для специалистов по базам данных, которые проектируют и создают решения для баз данных в организации. В число их обязанностей входит создание планов и проектов структуры баз данных, хранилища, объектов и серверов. Они создают план для среды, в которой работает решение для баз данных.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4t560
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=70-465&examname=Designing%20Database%20Solutions%20for%20Microsoft%20SQL%20Server&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-465
+scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=465&examname=Designing%20Database%20Solutions%20for%20Microsoft%20SQL%20Server&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-465
 locales:
 - en
 - zh-cn
