--- a/learn-certs-pr/exams/70-411.yml
+++ b/learn-certs-pr/exams/70-411.yml
@@ -17,7 +17,7 @@ subTitle: Этот экзамен — второй в серии из трех 
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4t7jV
 practiceTestUrl: https://www.mindhub.com/70-411-Administering-Windows-Server-2012-p/mu-70-411_p.htm?utm_source=microsoft&amp;utm_medium=certpage&amp;utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=70-411&examname=Administering%20Windows%20Server%202012&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-411
+scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=411&examname=Administering%20Windows%20Server%202012&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-411
 locales:
 - en
 - zh-cn
