--- a/learn-certs-pr/exams/70-745.yml
+++ b/learn-certs-pr/exams/70-745.yml
@@ -18,7 +18,7 @@ summary: |-
 subTitle: Кандидаты на прохождение этого экзамена — IT-специалисты, отвечающие за внедрение программно определяемого центра обработки данных (SDDC) с помощью Windows Server 2016 и Microsoft System Center 2016 Virtual Machine Manager (SCVMM).
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4tp1k
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=70-745&examname=Implementing%20a%20Software-Defined%20Datacenter&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-745
+scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=745&examname=Implementing%20a%20Software-Defined%20Datacenter&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-745
 locales:
 - en
 levels:
