updated 77- to include certiport

--- a/learn-certs-pr/exams/77-421.yml
+++ b/learn-certs-pr/exams/77-421.yml
@@ -14,7 +14,7 @@ summary: |-
 subTitle: Кандидаты на прохождение экзамена Microsoft OneNote 2013 должны иметь знание основ работы в средах OneNote и способность самостоятельного выполнения задач. Кандидаты должны знать правила применения основных функций OneNote 2013 и продемонстрировать эти знания на практике.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4trkE
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=77-421&examname=Microsoft%20OneNote%202013&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-421
+scheduleExamUrl: https://www.certiport.com/locator
 locales:
 - en
 - nb
