--- a/learn-certs-pr/exams/77-424.yml
+++ b/learn-certs-pr/exams/77-424.yml
@@ -12,7 +12,7 @@ summary: |-
 subTitle: Этот экзамен предназначен для кандидатов, которые имеют основные знания работы в среде Access 2013, а также могут выполнять задачи независимо. Кандидаты должны знать правила применения основных функций Access 2013 и продемонстрировать эти знания на практике.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4tnJp
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=77-424&examname=Access%202013&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-424
+scheduleExamUrl: https://www.certiport.com/locator
 locales:
 - en
 - zh-cn
