--- a/learn-certs-pr/exams/77-425.yml
+++ b/learn-certs-pr/exams/77-425.yml
@@ -12,7 +12,7 @@ summary: |-
 subTitle: Кандидаты уровня Expert (Эксперт) на прохождение экзамена Microsoft Word 2013 должны хорошо знать основы работы в среде Word, а также помогать другим пользователям правильно использовать возможности Word 2013. Кандидаты должны знать и использовать расширенные и специализированные функций приложения. Кандидаты должны уметь создавать, распространять профессиональные документы и управлять ими в различных целях и ситуациях. Также они должны уметь настраивать работу в среде Word в соответствии с потребностями и для повышения производительности. Примерами документов могут служить бизнес-планы, правовые документы, рекламные брошюры и массовые рассылки. Экзамен рассчитан на редакторов, менеджеров проектов, преподавателей, аспирантов, разработчиков технической документации и других специалистов.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4t556
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=77-425&examname=Word%202013%20Expert%20Part%20One&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-425
+scheduleExamUrl: https://www.certiport.com/locator
 locales:
 - en
 - zh-cn
