--- a/learn-certs-pr/exams/77-426.yml
+++ b/learn-certs-pr/exams/77-426.yml
@@ -12,7 +12,7 @@ summary: |-
 subTitle: Этот экзамен рассчитан на кандидатов экспертного уровня, обладающих глубоким знанием среды Word и способных обучать других специалистов правильному использованию возможностей Word 2013. Кандидаты должны знать и использовать расширенные и специализированные функций приложения. Кандидаты должны уметь создавать, контролировать и распространять профессиональные документы, предназначенные для различных специализированных целей и областей применения. Кроме того, они должны уметь настраивать среды Word для обеспечения соответствия требованиям и повышения эффективности. Примерами документов могут служить бизнес-планы, правовые документы, рекламные брошюры и массовые рассылки. Экзамен рассчитан на редакторов, менеджеров проектов, преподавателей, аспирантов, разработчиков технической документации и других специалистов.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4tfIV
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=77-426&examname=Word%202013%20Expert%20Part%20Two&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-426
+scheduleExamUrl: https://www.certiport.com/locator
 locales:
 - en
 - zh-cn
