--- a/learn-certs-pr/exams/77-601.yml
+++ b/learn-certs-pr/exams/77-601.yml
@@ -12,7 +12,7 @@ summary: |-
 subTitle: Кандидаты на этот экзамен должны обладать практическим опытом от шести месяцев до одного года по созданию готовых бизнес-решений с помощью Microsoft Office Word 2007 и, возможно, имеют опыт работы с предыдущими версиями Office Word. Эти кандидаты особенно сильны в создании, настройке и организации документов с использованием форматирования и визуального содержимого, соответствующих представляемой информации. Они также сильны в рассмотрении содержимого, обмене содержимым и его защите.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4t57w
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=77-601&examname=MOS:%20Using%20Microsoft%20Office%20Word%202007&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-601
+scheduleExamUrl: https://www.certiport.com/locator
 locales:
 - en
 - ru
