--- a/learn-certs-pr/exams/77-602.yml
+++ b/learn-certs-pr/exams/77-602.yml
@@ -12,7 +12,7 @@ summary: |-
 subTitle: Кандидаты на этот экзамен должны обладать практическим опытом от шести месяцев до одного года по созданию готовых бизнес-решений с помощью Microsoft Office Excel 2007 и, возможно, иметь опыт работы с предыдущими версиями Office Excel. Эти кандидаты особенно эффективны в создании и обработке данных, форматировании данных и содержимого, создании и изменении формул, визуальном представлении данных, совместной работе и защите данных.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4t57x
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=77-602&examname=MOS:%20Using%20Microsoft%20Office%20Excel%202007&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-602
+scheduleExamUrl: https://www.certiport.com/locator
 locales:
 - en
 - ru
