--- a/learn-certs-pr/exams/77-882.yml
+++ b/learn-certs-pr/exams/77-882.yml
@@ -12,7 +12,7 @@ summary: |-
 subTitle: Пользователь Microsoft Office Excel 2010 базового уровня должен уметь пользоваться программным обеспечением Microsoft Office Excel 2010 на функциональном уровне. Он должен знать и уметь использовать не менее 80 процентов функций и возможностей Microsoft Office Excel 2010. Пользователь базового уровня должен уметь использовать Microsoft Office Excel 2010 для создания и редактирования профессионально выглядящих электронных таблиц для различных целей и ситуаций. Пользователи включают людей самых разных профессий и должностей почти из всех областей профессиональной, студенческой и личной жизни.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4toWe
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=77-882&examname=Excel%202010&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-882
+scheduleExamUrl: https://www.certiport.com/locator
 locales:
 - en
 - zh-cn
