--- a/learn-certs-pr/exams/77-888.yml
+++ b/learn-certs-pr/exams/77-888.yml
@@ -12,7 +12,7 @@ summary: |-
 subTitle: Пользователи Microsoft Office Excel 2010 экспертного уровня могут уверенно использовать программное обеспечение Excel 2010 на функциональном уровне. Пользователи экспертного уровня могут работать с расширенными, функциями, формулами и инструментами анализа данных. Пользователи экспертного уровня могут работать с данными для целей анализа, презентации и совместной работы. Кроме того, пользователи экспертного уровня могут управлять параметрами Excel для настройки среды в соответствии с различными потребностями и с целью повышения производительности.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4t7k0
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=77-888&examname=Excel%202010%20Expert&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-888
+scheduleExamUrl: https://www.certiport.com/locator
 locales:
 - en
 - zh-cn
