--- a/learn-certs-pr/exams/77-420.yml
+++ b/learn-certs-pr/exams/77-420.yml
@@ -12,7 +12,7 @@ summary: |-
 subTitle: От кандидатов базового уровня, намеревающихся сдать экзамен по Microsoft Excel 2013, требуются знания основ работы в среде Excel и способность самостоятельно выполнять задачи. Кандидаты должны знать правила применения основных функций Excel 2013 и продемонстрировать эти знания на практике. Необходимо подтвердить способность создать и отредактировать книгу из нескольких листов для различных целей и ситуаций. Примерами могут служить сметы, диаграммы контроля производительности труда рабочей группы, накладные по заказам на продажу и дневники тренировок, оформленные на профессиональном уровне. Экзамен рассчитан на учащихся, конторских работников, бухгалтеров, преподавателей и представителей других профессий.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4toXa
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=77-420&examname=Excel%202013&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-420
+scheduleExamUrl: https://www.certiport.com/locator
 locales:
 - en
 - zh-cn
