--- a/learn-certs-pr/exams/77-428.yml
+++ b/learn-certs-pr/exams/77-428.yml
@@ -14,7 +14,7 @@ summary: |-
 subTitle: Кандидаты уровня Expert (Эксперт) на прохождение экзамена Excel 2013 должны хорошо знать основы работы в среде Excel и быть способны обучать других специалистов правильному использованию возможностей Excel 2013 пакета Office Professional Plus. Кандидаты должны знать и уметь использовать расширенные и специализированные функций приложения.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4tnJE
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=77-428&examname=Excel%202013%20Expert%20Part%20Two&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-428
+scheduleExamUrl: https://www.certiport.com/locator
 locales:
 - en
 - zh-cn
